--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "node-chat-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple Chat app",
   "scripts": {
     "start": "node server/chat.js",
     "test": "mocha server/**/*.test.js",
@@ -11,7 +10,7 @@
   "engines": {
     "node": "6.2.2"
   },
-  "author": "",
+  "author": "Anuj Yadav",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
